--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
     "express": "^4.17.1",
     "facebook-chat-api": "github:Schmavery/facebook-chat-api",
     "html-entities": "^1.2.1",
